데이터 기반 절약 내역 목록 반환 및 기간별 총 절약금액 + 주차/월별 차트 데이터 집계 반환